# AI_Services

./: .env  ASYNC_MIGRATION.md  COMMANDS.md  QUICKSTART.md  UV_COMPLETE.md  UV_SETUP.md  dockerfile  pyproject.toml  requirements.txt  setup.ps1  test_async_setup.py
ai_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: consumer.py  main.py
app/database/: connectMongodb.py  connectRabbitmq.py
app/services/: encode_post_service.py  hint_post_services.py  toxic_detector_service.py
app/utils/: model_loader.py
